# my_robot_description

./: CMakeLists.txt  package.xml
launch/: display.launch
rviz/: robot.rviz
scripts/: move_joints.py
urdf/: robot.urdf
